<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
    <name>px4_teleop</name>
    <version>0.0.0</version>
    <description>TODO: Package description</description>
    <maintainer email="uflautonomypark@gmail.com">autonomypark</maintainer>
    <license>Apache-2.0</license>

    <buildtool_depend>ament_cmake</buildtool_depend>

    <depend>rclcpp</depend>
    <depend>geometry_msgs</depend>
    <depend>mavros_msgs</depend>
    <depend>sensor_msgs</depend>
    <depend>visualization_msgs</depend>
    <depend>tf2</depend>
    <depend>tf2_ros</depend>
    <depend>tf2_geometry_msgs</depend>
    <depend>px4_safety_lib</depend>

    <export>
        <build_type>ament_cmake</build_type>
    </export>
</package>
